freshrss/freshrss-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: freshrss
  name: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: freshrss
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: freshrss
    spec:
      containers:
        - env:
            - name: FRESHRSS_ENV
              value: production
            - name: OIDC_ENABLED
              value: "0"
            - name: TZ
              value: Europe/Amsterdam
          image: freshrss/freshrss:latest
          name: freshrss
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/FreshRSS/data
              name: data
            - mountPath: /var/www/FreshRSS/extensions
              name: extensions
            - mountPath: /var/www/FreshRSS/data/config.custom.php
              name: freshrss-claim2
            - mountPath: /var/www/FreshRSS/data/config-user.custom.php
              name: freshrss-claim3
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: extensions
          persistentVolumeClaim:
            claimName: extensions
        - name: freshrss-claim2
          persistentVolumeClaim:
            claimName: freshrss-claim2
        - name: freshrss-claim3
          persistentVolumeClaim:
            claimName: freshrss-claim3
