freshrss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rss-ingress
  annotations:
    cert-manager.io/cluster-issuer: prod-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: rss.hensen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freshrss
            port: 
              number: 8080            
  # TLS configuration for HTTPS
  tls:
    # TLS secretName used on ClusterIssuer
    - secretName:  letsencrypt-prod
      hosts:
        - rss.hensen.io
